--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thuy~</title>
-    <link rel="stylesheet" href="t.css">
-    <link rel="stylesheet" href="t2.css">
+    <title>Thuy~ Baby</title>
+
+    <link rel="stylesheet" href="mycss.css">
+    <link rel="stylesheet" href="custom.css">
 </head>
 
 <body>
@@ -67,10 +68,12 @@
         <div class="dust dust-5 white"></div>
         <div class="dust dust-6 yellow"></div>
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="t2.js"></script>
+
+    <script src="anim.js"></script>
 </body>
 
 </html>
