--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thuy~ Baby</title>
+    <title><3 <3 <3</title>
 
     <link rel="stylesheet" href="mycss.css">
     <link rel="stylesheet" href="custom.css">
